--- a/Deployment.yml
+++ b/Deployment.yml
@@ -17,3 +17,30 @@ spec:
           image: nginx
           ports:
             - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: cluster-ip
+spec:
+  type: ClusterIP
+  selector:
+    app: nginx
+  ports:
+    - name: http
+      port: 30001
+      targetPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nodeport
+spec:
+  type: NodePort
+  selector:
+    app: nginx
+  ports:
+    - name: http
+      port: 30001
+      targetPort: 80
+      nodePort: 30002
